@@ -1,5 +1,11 @@
 2018-04-10  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* gdb.base/watchpoint-reuse-slot.exp: Test can be run using
+	software watchpoints, we just need to update a test pattern in one
+	place.
+
+2018-04-10  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* gdb.base/share-env-with-gdbserver.c (main): Add call to
 	malloc/free.
 
